
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct utsname {char* release; int version; int machine; } ;
struct TYPE_3__ {char* distro; char* version; } ;


 int ARRAY_SIZE (TYPE_1__*) ;
 int DISTRO_CODENAME_LENGTH ;
 int EXIT_FAILURE ;
 int dprintf (char*,...) ;
 int exit (int ) ;
 int get_distro_codename (char*,int) ;
 struct utsname get_kernel_version () ;
 int kernel ;
 TYPE_1__* kernels ;
 scalar_t__ strcmp (char*,char*) ;
 int strcpy (char*,char*) ;
 int * strstr (int ,char*) ;

void detect_kernel() {
 char codename[DISTRO_CODENAME_LENGTH];
 struct utsname u;

 u = get_kernel_version();

 if (strstr(u.machine, "64") == ((void*)0)) {
  dprintf("[-] system is not using a 64-bit kernel\n");
  exit(EXIT_FAILURE);
 }

 if (strstr(u.version, "-Ubuntu") == ((void*)0)) {
  dprintf("[-] system is not using an Ubuntu kernel\n");
  exit(EXIT_FAILURE);
 }

 if (strstr(u.version, "14.04.1")) {
  strcpy(&codename[0], "trusty");
 } else if (strstr(u.version, "16.04.1")) {
  strcpy(&codename[0], "xenial");
 } else {
  get_distro_codename(&codename[0], DISTRO_CODENAME_LENGTH);


  if (!strcmp(&codename[0], "qiana"))
   strcpy(&codename[0], "trusty");
  if (!strcmp(&codename[0], "rebecca"))
   strcpy(&codename[0], "trusty");
  if (!strcmp(&codename[0], "rafaela"))
   strcpy(&codename[0], "trusty");
  if (!strcmp(&codename[0], "rosa"))
   strcpy(&codename[0], "trusty");
  if (!strcmp(&codename[0], "sarah"))
   strcpy(&codename[0], "xenial");
  if (!strcmp(&codename[0], "serena"))
   strcpy(&codename[0], "xenial");
  if (!strcmp(&codename[0], "sonya"))
   strcpy(&codename[0], "xenial");
 }

 int i;
 for (i = 0; i < ARRAY_SIZE(kernels); i++) {
  if (strcmp(&codename[0], kernels[i].distro) == 0 &&
      strcmp(u.release, kernels[i].version) == 0) {
   dprintf("[.] kernel version '%s' detected\n", kernels[i].version);
   kernel = i;
   return;
  }
 }

 dprintf("[-] kernel version not recognized\n");
 exit(EXIT_FAILURE);
}
